--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1126,10 +1126,6 @@ html {
         width: 94%;
     }
 
-    .title-exp {
-        font-size: 16px;
-    }
-
     .section3-input-section3mz4 {
         flex-direction: column;
         align-items: center;
@@ -1160,10 +1156,6 @@ html {
     .image-section3-section3mz4 img {
         width: 360px;
         height: auto;
-    }
-
-    .wrap-bottom-exp {
-        padding-right: 0;
     }
 }
 
@@ -1423,7 +1415,7 @@ html {
     overflow: hidden;
     height: max-content;
     margin: 50px 0 30px 0;
-    padding: 30px 60px;
+    padding: 30px 0px;
 }
 
 .top-exp {
@@ -1467,10 +1459,12 @@ html {
 .subtitle-exp {
     color: var(--secondaryOrange);
     font-size: 20px;
+    margin-left: 60px;
 }
 
 .title-exp {
     font-size: 32px;
+    margin-left: 60px;
     margin-top: 16px;
 }
 
@@ -1487,6 +1481,7 @@ html {
     transition: 1s;
     overflow: auto;
     padding-right: 70px;
+    padding-left: 50px;
     justify-content: space-between;
 }
 
@@ -1572,7 +1567,16 @@ html {
 
 @media screen and (max-width: 750px) {
     .container-exp {
+        margin-top: 80px;
         padding: 0px;
+    }
+
+    .subtitle-exp {
+        margin-left: 0;
+    }
+
+    .title-exp {
+        margin-left: 0;
     }
 
     .top-exp {
@@ -1736,6 +1740,11 @@ section4-btn-section4mz4:hover {
 @media only screen and (min-width: 320px) and (max-width: 576px) {
     .container-section4-section4mz4 {
         padding: 60px 30px 30px 30px;
+    }
+
+    .wrap-bottom-exp {
+        padding-right: 0;
+        padding-left: 0px;
     }
 
     .section4-title-section4mz4 {
